--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "framer-motion": "^7.6.7",
+    "framer-motion": "^7.10.3",
     "next": "13.0.3",
     "next-sanity": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.5",
+    "react-hook-form": "^7.43.8",
+    "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "typescript": "4.9.3",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.3.0"
   }
 }
